samples/_failures_safe/1761317848_9faa6a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_faf60df4.c:150:1: error: expected identifier or ‘(’ at end of input
  150 | int
      | ^~~
